# pjrt-ocl

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTES.md  README.md  env.sh  pyproject.toml
build-test/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  runtime_test  vm_cl_source.h
docs/: bench_plot.csv  bench_plot_pocl.csv  bench_plot_xe2.csv  bench_transformer.csv  coverage-baseline.md  decisions.md  flops-analysis.md  hardware-bringup.md  ideas-for-v2.md  matmul-tensorcore-brief.md  megakernel-survey.md  memory.md  perf-findings.md  pjrt-integration.md  roadmap.md  stablehlo-notes.md  tile-isa.md  vmprogram.md  workload-coverage-cpu.md  workload-coverage-xe2.md  workload-coverage.md
pjrt_plugin/: CMakeLists.txt
pjrt_plugin/cmake/: embed_cl.cmake
pjrt_plugin/kernels/: vm.cl  vm2.cl  vm_common.cl  vm_main.cl
pjrt_plugin/kernels/ops/: attention.cl  conv.cl  dynslice.cl  ew.cl  gather.cl  iota.cl  mma.cl  reduce.cl  reduce_window.cl  region.cl  scatter.cl
pjrt_plugin/src/: plugin.cc  runtime.cc  runtime.h  runtime_test.cc
poc/01-device-vm/: Makefile  NOTES.md  README.md  main.c  vm.cl
poc/02-pjrt-skeleton/: CMakeLists.txt  NOTES.md  README.md  pjrt_api_fn_list.h  plugin.cc  test_jax_devices.py
poc/02-pjrt-skeleton/jax_plugins/opencl/: __init__.py
poc/03-python-lowering/: NOTES.md  README.md  dump_stablehlo.py  lower_service.py  research.md  test_poc03.py  vmprogram.py  walk.py
poc/04-vliw-vm/: Makefile  NOTES.md  README.md  main.c  vliw.cl
poc/05-typed-lanes/: Makefile  NOTES.md  README.md  kernels.cl  main.c
poc/06-fast-mma/: Makefile  NOTES.md  README.md  bench  bench.c  mma.cl
poc/07-barrier-memmodel/: Makefile  README.md  barrier_starvation.c  main.c
poc/08-occupancy-discovery/: Makefile  README.md  main.c  poc08
poc/09-cpu-kernels/: Makefile  README.md  main.c
poc/10-cpu-sgemm/: Makefile  README.md  main.c
poc/12-fixed-trip/: README.md  bench.py  results_nvidia.csv  results_nvidia_inplace_dus.csv  results_pocl.csv  results_pocl_inplace_dus.csv
poc/13-async-prefetch/: .gitignore  Makefile  README.md  kernels.cl  main.c  results_nvidia.csv  results_pocl.csv
poc/13-map-region/: README.md
poc/14-map-region/: .gitignore  Makefile  main.c
poc/15-region-budget/: .gitignore  Makefile  README.md  regprobe.c
poc/16-scoreboard/: .gitignore  Makefile  README.md  analyze_schedule.py  critical_path.py  main.c
poc/17-nv-mma/: .gitignore  Makefile  README.md  bench17.c  bench17f16in.c  bench17hp.c  bench17mma.c  mma17.cl  mma17_f16in.cl  mma17_hp.cl  mma17_mma.cl  mmbench.py  probe.c  probe.cl
poc/18-cpu-sgemm-2d/: Makefile  README.md  main.c
poc/19-xe2-mma/: README.md  bench19.c  mma19.cl
poc/20-xe2-bw/: README.md  bw20.c
poc/21-xe2-xmx/: Makefile  README.md  bench21.c  probe21.c  probe21.cl  tf32bits.c  xmx21.cl  xmx21tf32.cl
python/: NOTES.md  pyproject.toml
python/pjrt_ocl/: __init__.py  lower_service.py  lowering.py  opsem.py  scheduler.py  vmreader.py
python/pjrt_ocl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/pjrt_ocl/ops/: __init__.py  attention.py  bitcast.py  complex_fft.py  concat.py  conv.py  dot.py  dynslice.py  elementwise.py  gather_index.py  making.py  reduce.py  reduce_window.py  region.py  scatter_index.py  shape.py
tests/: SCOREBOARD.md  _brax_e2e_body.py  _case_e2e_body.py  _dynslice_e2e_body.py  _e2e_body.py  _matmul_host_e2e_body.py  _matmul_hybrid_e2e_body.py  _random_e2e_body.py  _reduce_int_e2e_body.py  _sdy_e2e_body.py  _while_e2e_body.py  conftest.py  oputil.py  test_arena_reuse.py  test_e2e.py  test_lowering.py  test_ops_bitcast.py  test_ops_case.py  test_ops_conv.py  test_ops_dot.py  test_ops_dot_viewfold.py  test_ops_dynslice.py  test_ops_elementwise.py  test_ops_fft.py  test_ops_flash.py  test_ops_fused_norm.py  test_ops_gather.py  test_ops_gelu.py  test_ops_making.py  test_ops_reduce.py  test_ops_reduce_window.py  test_ops_region.py  test_ops_scatter.py  test_ops_shape.py  test_ops_shift.py  test_ops_while.py
tools/: bench_cpu.py  bench_decode.py  bench_ops.py  bench_ops.sh  bench_transformer.py  dump_tasks.py  ewsweep.sh  jax_coverage.sh  lanesweep.sh  micro_cpu.py  micro_xe2.py  minvolsweep.sh  mm_pathcmp.py  norm_bug.py  phase_cost.py  phase_count.py  plot_bench.py  plot_schedule.py  plot_transformer.py  plot_workloads.py  prof_workload.py  reduce_bw.py  runall.sh  softmax_bug.py  softmax_bug.sh  softmax_bug2.py  softmax_shapes.sh
tools/bench_suite/: __init__.py  run_suite.py  workloads.py
